fix bug: white bar when used on mobile

--- a/style.css
+++ b/style.css
@@ -1,14 +1,26 @@
 *{
     margin:0;
     padding:0;
+
 }
+
 
 body{
     font-family: 'Roboto Condensed', sans-serif;
     width: 100%;
     height: 100%;
-    overflow-x: hidden; 
+    
+    background:  
+        linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),
+        url('img/headerBG.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size:cover;
+        background-attachment: fixed;
+}
 
+.wrapper{
+    overflow-x: hidden;
 }
 
 hero h1{
@@ -21,7 +33,7 @@ hero h1{
 }
 
 .logo-large{
-    margin-top: 120px;
+    margin-top: 110px;
     margin-bottom: 50px;
     height: 250px;
     content:url(img/logo.gif);
@@ -34,7 +46,6 @@ hero h1{
     /*background-color: #1f1f1f;*/
     background-color: rgba(0,0,0,0.2);
     font-family: 'Exo', sans-serif;
-    margin-top: -66px;
     width:100%;
     transition: ease-out 0.5s;
 }
@@ -44,7 +55,7 @@ hero h1{
     transition: ease-in 0.5s;
 }
 .navbar-nav li{
-    padding-right: 10px;
+ 
 
 }
 
@@ -62,15 +73,10 @@ hero h1{
 
 .hero-section {
     width:100%;
+
     height:100vh !important;
     min-height: 700px;
-    background:  
-        linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),
-        url('img/headerBG.jpg');
-    background-repeat: no-repeat;
-    background-position: centerop;
-    background-size:cover;
-    background-attachment: fixed;
+    
     color:white;
     text-align: center;
     font-family: 'Exo', sans-serif;
@@ -80,7 +86,7 @@ hero h1{
     font-size: 50px;
     text-transform: uppercase;
     text-shadow:2px 2px #333;
-    text-shadow: 3px 3px 20px black;
+    text-shadow: 3px 3px 10px black;
     letter-spacing: 4px;
 }
 .hero-section h5 {
@@ -224,7 +230,7 @@ hr {
 
 .fa-github, .fa-linkedin, .fa-phone, .fa-at{
     color:orange;
-    font-size: 25px;
+    font-size: 23px;
     padding-bottom: 15px;
 }
 
@@ -239,7 +245,7 @@ footer{
     color: white;
     padding-left: 15px;
     vertical-align: middle;
-    font-size:25px;
+    font-size:23px;
     font-family: 'Exo', sans-serif;
 }
 
